# src/app/services/models/collection-model-entity-model-stock.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+import { EntityModelStock } from '../models/entity-model-stock';
+import { Links } from '../models/links';
+export interface CollectionModelEntityModelStock {
+  '_embedded'?: {
+'stocks'?: Array<EntityModelStock>;
+};
+  '_links'?: Links;
+}
